--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@docusaurus/plugin-ideal-image": "^2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
     "@mdx-js/react": "^1.6.22",
+    "@unovis/react": "^1.0.2",
+    "@unovis/ts": "^1.0.2",
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.2",
     "esbuild-loader": "^2.20.0",
